--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,20 @@
     <title>vtrunk</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <script type='text/javascript'
+            src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[Your_Bing_Maps_Key]'></script>
     <style>
-      body{
-        background-color: darkorange;
-      }
+        body {
+            background-color: darkorange;
+        }
     </style>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but vtrunk doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but vtrunk doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
